fixed image size on mobile devices

--- a/src/containers/NotFound.css
+++ b/src/containers/NotFound.css
@@ -5,4 +5,5 @@
 .not-found .snake-logo {
   width: 500px;
   height: 500px;
+  max-width: 100%;
 }
